Upgrade JDK to 19